force-app/main/default/objects/msf_Master_Admin__c/msf_Master_Admin__c.object-meta.xml
<CustomObject>
    <description>Objeto custom para registrar datos de configuración sólo accesibles por administradores.</description>
    <label>Maestro Admin</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nombre maestro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maestros Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>