force-app/main/default/objects/msf_Master_Admin__c/fields/msf_Control__c.field-meta.xml
<CustomField>
    <fullName>msf_Control__c</fullName>
    <label>Control</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>