force-app/main/default/objects/msf_Master_Admin__c/fields/msf_Description__c.field-meta.xml
<CustomField>
    <fullName>msf_Description__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>