force-app/main/default/objects/msf_Master_Admin__c/fields/msf_FamilyId__c.field-meta.xml
<CustomField>
    <fullName>msf_FamilyId__c</fullName>
    <label>Id familia</label>
    <length>4</length>
    <type>Text</type>
</CustomField>