force-app/main/default/objects/msf_Master_Admin__c/validationRules/MSF_mandatory_field_Valor_MaestroAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_mandatory_field_Valor_MaestroAdmin</fullName>
    <active>true</active>
    <description>El campo valor no puede estar en blanco</description>
    <errorConditionFormula>ISBLANK(msf_Value__c )</errorConditionFormula>
    <errorMessage>El campo valor no puede estar en blanco</errorMessage>
</ValidationRule>